src-tauri/tests/trybuild/removed_top_level_extension.rs
use app::extension::ExtensionRegistry;

fn main() {
    let _ = ExtensionRegistry::new();
}